ghc-4335c07/testsuite/tests/parser/should_fail/T9225.hs
module T9225 where
-- Should be a parse error:
-- version numbers not allowed in package qualified imports
import "some-package-0.1.2.3" Some.Module
